# RVOS

./: .gitignore  CODE_FIXES.md  ISSUES.md  Makefile  README.md  ROADMAP.md  SIMPLE_SYSCALL.md  SYSCALL_AUTO_GENERATION.md  common.mk  gdbinit  jh7110-milkv-mars.dtb  mars_jtag.cfg  os.ld
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml
OS/: Makefile  algorithm.c  entry.S  kernel.c  lib.h  malloc.c  os.elf  os.h  os.txt  plic.c  printf.c  sched.c  syscall.c  syscall.h  task.c  timer.c  trap.c  uart.c  user.c
OS/02-memanagement/: kernel.c  os.elf  os.h  page.c  uart.c
OS/drivers/: uart.c
OS/include/: kernel.h
OS/kernel/: main.c  sched.c  timer.c  trap.c
OS/mm/: malloc.c  page.c
arch/riscv/: context.S  entry.S  start.S
drivers/: plic.c  sbi_uart.c  uart.c
include/: fdt.h  kernel.h  rust_interface.h  rust_tasks.h  string.h  syscalls.h
include/arch/: platform.h  riscv.h  sbi.h
include/kernel/: boot_info.h  hart.h  irq.h  lib.h  list.h  mm.h  printk.h  sched.h  syscall.h  syscalls.h  timer.h  types.h  uart.h
include/uapi/: printf.h  syscall.h  user_tasks.h
kernel/: algorithm.c  boot_info.c  fdt.c  hart.c  main.c  printk.c  sched.c  spinlock.c  string.c  syscall.c  timer.c  trap.c  user.c
mm/: malloc.c  page.c
rust_core/: Cargo.toml  build.rs
rust_core/src/: fdt.rs  generated_syscall_interface.rs  lib.rs  string.rs  user_task.rs
rust_tasks/: Cargo.toml  build.rs
rust_tasks/src/: lib.rs  user_task.rs
test/: test.h  test_main.c  test_multicore.c  test_page.c
user/: printf.c  syscalls.c  user_tasks.c
(+4 files in other folders)
